--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,15 +1,18 @@
 {
     "compilerOptions": {
         "target": "ES6",
+        "lib": ["es2017", "dom"],
         "moduleResolution": "node",
         "strict": true,
         "paths": {
-            "three/examples/jsm/libs/dat.gui.module": ["../node_modules/@types/dat.gui"]
+            "three/examples/jsm/libs/dat.gui.module": [
+                "../node_modules/@types/dat.gui"
+            ]
         },
         "strictPropertyInitialization": false,
         "allowSyntheticDefaultImports": true,
-        "jsx": "react",
+        "jsx": "react"
     },
-    
-    "include": ["Application/*", "./*"],
+
+    "include": ["Application/*", "./*"]
 }
